@@ -1,21 +1,0 @@
-#!/bin/bash
-#script to generate switch case for returning instruction length
-
-NUM=0
-
-printf "\t"
-echo "switch (op)"
-printf "\t"
-echo "{"
-echo
-while [ $NUM -lt 256 ];
-do
-	printf "\t\tcase 0x%X:\n" $NUM
-	printf "\t\t\treturn 1;\n"
-	
-	let "NUM = $NUM + 1"
-done
-
-printf "\t"
-echo "}"
-echo
