@@ -1,13 +1,0 @@
-
-;<Program title>
-
-	jmp	start
-
-;data
-
-
-;code
-start:	nop
-
-
-		hlt
